package org.example.app.client;

public class Client {

    public static void main(String[] args) throws Exception{
        NettyClient.runClient();
    }
}