package org.example.app.server;

public class Server {

    public static void main(String[] args) throws Exception {
        NettyServer.runServer();
    }
}