package org.example.app.utils;

public class Constants {

    private Constants(){
    }

    public static final int PORT = 8001;
    public static final String HOST = "127.0.0.1";
    public static final String SERVER_START_MSG = "Server started and waiting for users...";
    public static final String USER_JOIN_MSG = "User joined - ";
    public static final String MSG_RECEIVE_MSG = "Message received: ";
    public static final String SERVER_CLOSE_MSG = "Closing connection for user - ";
    public static final String SERVER_HELLO_MSG = "Hello ";
    public static final String SERVER_HELLO2_MSG = ", welcome to our FreeForAll server!";
    public static final String SERVER_MAIN_MSG = "SERVER: ";

}
